# brainfuck-machine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
compiler/: CMakeLists.txt  bfc.c  bfc.h  lexer.c  lexer.h  main.c
example/: 5letters.bfe  conway-life.bfe  helloworld-compiled.bfe  helloworld.bf  helloworld.bfe  numwarp.bfe
vm/: CMakeLists.txt  bfe.c  bfe.h  bfm.c  bfm.h  defs.h  main.c
